deploy/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: safeashouses-kibana
  labels:
    app: safeashouses
spec:
  ports:
    - port: 5601
      name: http
  selector:
    app: safeashouses
    tier: kibana
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safeashouses-kibana
  labels:
    app: safeashouses
spec:
  selector:
    matchLabels:
      app: safeashouses
      tier: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: safeashouses
        tier: kibana
    spec:
      containers:
      - image: kibana:8.5.3
        name: kibana
        ports:
        - containerPort: 5601
          name: http
