deploy/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: safeashouses-server
  labels:
    app: safeashouses
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: safeashouses
    tier: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safeashouses-server
  labels:
    app: safeashouses
spec:
  selector:
    matchLabels:
      app: safeashouses
      tier: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: safeashouses
        tier: server
    spec:
      containers:
      - image: docker.io/briggysmalls/safeashouses-ui:50c29144
        name: safeashouses-server
        ports:
          - containerPort: 80
            name: http
        resources:
          limits:
            memory: "0.25Gi"
            cpu: "0.2"
