deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: scrapemove.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: safeashouses-server
            port:
              number: 80
